--- a/extensions/python3/Makefile
+++ b/extensions/python3/Makefile
@@ -135,6 +135,9 @@ cross : $(CROSSPYTHON)
 
 # Build the Debian package file
 
+PYLIBDIR	:= /usr/local/lib/python$(MAJORVER)
+PYETCDIR	:= /usr/local/etc/python$(MAJORVER)
+
 $(PKGDIR) : $(CROSSPYTHON)
 	mkdir -p					$(PKGDIR)/DEBIAN
 	install -cm 0644 control			$(PKGDIR)/DEBIAN
@@ -143,8 +146,11 @@ $(PKGDIR) : $(CROSSPYTHON)
 	sed -i s/@@VERSION@@/$(PKGVERSION)/g		$(PKGDIR)/DEBIAN/control
 	install -cm 0755 postinst			$(PKGDIR)/DEBIAN
 	sed -i s/@@MAJORVER@@/$(MAJORVER)/g		$(PKGDIR)/DEBIAN/postinst
+	mkdir -p					$(PKGDIR)/$(PYETCDIR)/site-packages
 	cp -R -P -p $(CROSSDIR)/usr			$(PKGDIR)
-	cp -R -P -p $(LIBSIMPLEIO)/python/packages/munts $(PKGDIR)/usr/local/lib/python$(MAJORVER)
+	cp -R -P -p $(LIBSIMPLEIO)/python/packages/munts $(PKGDIR)/$(PYLIBDIR)
+	rm -rf						$(PKGDIR)/$(PYLIBDIR)/site-packages
+	ln -s -f $(PYETCDIR)/site-packages		$(PKGDIR)/$(PYLIBDIR)/site-packages
 	find $(PKGDIR) -name __pycache__ -exec rm -rf {} ";" >/dev/null 2>&1 ; true
 	install -cm 0755 $(LIBSLIBDIR)/libffi.so.8	$(PKGDIR)/usr/local/lib
 	$(CROSS_COMPILE)strip				$(PKGDIR)/usr/local/lib/*.so.*
