Enabled CONFIG_SENSORS_GPIO_FAN, for the Pi 4 Click Shield.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22529 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.6.64 Kernel Configuration
+# Linux/arm64 6.6.67 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-muntsos-linux-gnu-gcc (crosstool-NG 1.26.0) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -1330,7 +1330,6 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # Misc devices
 #
 CONFIG_BCM2835_SMI=y
-# CONFIG_RP1_PIO is not set
 # CONFIG_AD525X_DPOT is not set
 # CONFIG_DUMMY_IRQ is not set
 # CONFIG_PHANTOM is not set
@@ -2260,7 +2259,7 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_GL520SM is not set
 # CONFIG_SENSORS_G760A is not set
 # CONFIG_SENSORS_G762 is not set
-# CONFIG_SENSORS_GPIO_FAN is not set
+CONFIG_SENSORS_GPIO_FAN=y
 # CONFIG_SENSORS_HIH6130 is not set
 # CONFIG_SENSORS_HS3001 is not set
 # CONFIG_SENSORS_IIO_HWMON is not set
