--- a/boot/OrangePiZero2W/uboot/uboot.config
+++ b/boot/OrangePiZero2W/uboot/uboot.config
@@ -1,13 +1,12 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# U-Boot 2025.01-rc4 Configuration
+# U-Boot 2024.10 Configuration
 #
 
 #
 # Compiler: aarch64-muntsos-linux-gnu-gcc (crosstool-NG 1.26.0) 13.2.0
 #
 CONFIG_CREATE_ARCH_SYMLINK=y
-CONFIG_HAVE_SETJMP=y
 CONFIG_SUPPORT_LITTLE_ENDIAN=y
 CONFIG_SYS_CACHE_SHIFT_6=y
 CONFIG_64BIT=y
@@ -52,7 +51,6 @@ CONFIG_ARM64_CRC32=y
 CONFIG_COUNTER_FREQUENCY=24000000
 # CONFIG_POSITION_INDEPENDENT is not set
 # CONFIG_INIT_SP_RELATIVE is not set
-# CONFIG_DRIVER_GICV2 is not set
 # CONFIG_GIC_V3_ITS is not set
 # CONFIG_GICV3_SUPPORT_GIC600 is not set
 CONFIG_STATIC_RELA=y
@@ -199,7 +197,8 @@ CONFIG_ENV_SIZE=0x10000
 CONFIG_ENV_OFFSET=0xF0000
 CONFIG_ENV_SECT_SIZE=0x10000
 CONFIG_DM_GPIO=y
-CONFIG_DEFAULT_DEVICE_TREE="allwinner/sun50i-h618-orangepi-zero2w"
+CONFIG_DEFAULT_DEVICE_TREE="sun50i-h618-orangepi-zero2w"
+CONFIG_SPL_TEXT_BASE=0x20060
 CONFIG_OF_LIBFDT_OVERLAY=y
 CONFIG_MULTI_DTB_FIT_UNCOMPRESS_SZ=0x8000
 CONFIG_DM_RESET=y
@@ -210,18 +209,12 @@ CONFIG_SPL_SERIAL=y
 CONFIG_SPL_STACK_R_ADDR=0x4fe00000
 CONFIG_SPL_STACK=0x52a00
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x2000
-CONFIG_SPL_TEXT_BASE=0x20060
 CONFIG_SPL_HAS_BSS_LINKER_SECTION=y
 CONFIG_SPL_BSS_START_ADDR=0x4ff80000
 CONFIG_SPL_BSS_MAX_SIZE=0x80000
 CONFIG_SPL_STACK_R=y
 CONFIG_SPL_STACK_R_MALLOC_SIMPLE_LEN=0x100000
-CONFIG_SYS_BOOTM_LEN=0x4000000
-CONFIG_SYS_LOAD_ADDR=0x42000000
 CONFIG_WATCHDOG_TIMEOUT_MSECS=16000
-CONFIG_SPL_OF_LIBFDT_ASSUME_MASK=0xff
-CONFIG_SF_DEFAULT_BUS=0
-CONFIG_SF_DEFAULT_CS=0
 CONFIG_SPL_SYS_MALLOC_F=y
 CONFIG_ERR_PTR_OFFSET=0x0
 CONFIG_SPL_SIZE_LIMIT=0x0
@@ -240,8 +233,6 @@ CONFIG_DRAM_SUN50I_H616_TPR6=0x48808080
 CONFIG_DRAM_SUN50I_H616_TPR10=0x402f6663
 CONFIG_DRAM_SUN50I_H616_TPR11=0x26262524
 CONFIG_DRAM_SUN50I_H616_TPR12=0x100f100f
-CONFIG_DRAM_SUN50I_H616_PHY_ADDR_MAP_0=y
-# CONFIG_DRAM_SUN50I_H616_PHY_ADDR_MAP_1 is not set
 CONFIG_AXP_PMIC_BUS=y
 CONFIG_SUNXI_SRAM_ADDRESS=0x20000
 CONFIG_SUNXI_RVBAR_ADDRESS=0x09010040
@@ -318,7 +309,15 @@ CONFIG_PSCI_RESET=y
 # CONFIG_ARMV8_EA_EL3_FIRST is not set
 # CONFIG_ARMV8_UDELAY_EVENT_STREAM is not set
 # CONFIG_ARMV8_CRYPTO is not set
+# CONFIG_CMD_DEKBLOB is not set
+# CONFIG_IMX_CAAM_DEK_ENCAP is not set
+# CONFIG_IMX_OPTEE_DEK_ENCAP is not set
+# CONFIG_IMX_SECO_DEK_ENCAP is not set
+# CONFIG_IMX_ELE_DEK_ENCAP is not set
+# CONFIG_CMD_HDMIDETECT is not set
+CONFIG_IMX_DCD_ADDR=0x00910000
 CONFIG_SYS_MEM_TOP_HIDE=0x0
+CONFIG_SYS_LOAD_ADDR=0x42000000
 CONFIG_ENV_ADDR=0x0
 
 #
@@ -388,61 +387,6 @@ CONFIG_SYS_UBOOT_START=0x4a000000
 #
 
 #
-# UEFI Support
-#
-CONFIG_EFI_LOADER=y
-CONFIG_EFI_BINARY_EXEC=y
-
-#
-# UEFI services
-#
-CONFIG_EFI_HAVE_RUNTIME_RESET=y
-
-#
-# UEFI Variables
-#
-CONFIG_EFI_VARIABLE_FILE_STORE=y
-# CONFIG_EFI_RT_VOLATILE_STORE is not set
-# CONFIG_EFI_VARIABLE_NO_STORE is not set
-# CONFIG_EFI_VARIABLES_PRESEED is not set
-CONFIG_EFI_VAR_BUF_SIZE=131072
-CONFIG_EFI_PLATFORM_LANG_CODES="en-US"
-
-#
-# Capsule support
-#
-# CONFIG_EFI_RUNTIME_UPDATE_CAPSULE is not set
-# CONFIG_EFI_CAPSULE_ON_DISK is not set
-CONFIG_EFI_CAPSULE_MAX=15
-
-#
-# UEFI protocol support
-#
-CONFIG_EFI_DEVICE_PATH_TO_TEXT=y
-CONFIG_EFI_DEVICE_PATH_UTIL=y
-CONFIG_EFI_DT_FIXUP=y
-CONFIG_EFI_LOADER_HII=y
-CONFIG_EFI_UNICODE_COLLATION_PROTOCOL2=y
-CONFIG_EFI_UNICODE_CAPITALIZATION=y
-CONFIG_EFI_LOAD_FILE2_INITRD=y
-
-#
-# Misc options
-#
-# CONFIG_EFI_LOADER_BOUNCE_BUFFER is not set
-CONFIG_EFI_ECPT=y
-CONFIG_EFI_EBBR_2_1_CONFORMANCE=y
-# CONFIG_EFI_SCROLL_ON_CLEAR_SCREEN is not set
-
-#
-# EFI bootmanager
-#
-CONFIG_EFI_BOOTMGR=y
-# CONFIG_EFI_HTTP_BOOT is not set
-CONFIG_BOOTEFI_HELLO_COMPILE=y
-CONFIG_BOOTEFI_TESTAPP_COMPILE=y
-
-#
 # Boot images
 #
 CONFIG_ANDROID_BOOT_IMAGE=y
@@ -463,6 +407,7 @@ CONFIG_SPL_LOAD_FIT_ADDRESS=0x0
 # CONFIG_SPL_LOAD_FIT_APPLY_OVERLAY is not set
 # CONFIG_SPL_LOAD_FIT_FULL is not set
 # CONFIG_SPL_FIT_IMAGE_POST_PROCESS is not set
+CONFIG_SPL_FIT_SOURCE=""
 # CONFIG_USE_SPL_FIT_GENERATOR is not set
 CONFIG_PXE_UTILS=y
 CONFIG_BOOT_DEFAULTS_FEATURES=y
@@ -487,8 +432,8 @@ CONFIG_BOOTMETH_VBE_SIMPLE=y
 CONFIG_BOOTMETH_VBE_SIMPLE_OS=y
 # CONFIG_SPL_BOOTMETH_VBE_SIMPLE is not set
 # CONFIG_BOOTMETH_SCRIPT is not set
-# CONFIG_UPL is not set
 CONFIG_LEGACY_IMAGE_FORMAT=y
+CONFIG_SYS_BOOTM_LEN=0x4000000
 CONFIG_SUPPORT_RAW_INITRD=y
 # CONFIG_CHROMEOS is not set
 # CONFIG_CHROMEOS_VBOOT is not set
@@ -536,6 +481,7 @@ CONFIG_OF_BOARD_SETUP=y
 # CONFIG_OF_SYSTEM_SETUP is not set
 # CONFIG_OF_STDOUT_VIA_ALIAS is not set
 # CONFIG_FDT_FIXUP_PARTITIONS is not set
+# CONFIG_FDT_SIMPLEFB is not set
 CONFIG_ARCH_FIXUP_FDT_MEMORY=y
 # CONFIG_USE_BOOTARGS is not set
 # CONFIG_BOOTARGS_SUBST is not set
@@ -661,10 +607,9 @@ CONFIG_SPL_BANNER_PRINT=y
 # CONFIG_SPL_DISPLAY_PRINT is not set
 CONFIG_SPL_SYS_MMCSD_RAW_MODE=y
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR=y
-# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION is not set
-# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION_TYPE is not set
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_SECTOR=0x40
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_DATA_PART_OFFSET=0x10
+# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION is not set
 CONFIG_SPL_FIT_IMAGE_TINY=y
 # CONFIG_SPL_CACHE is not set
 # CONFIG_SPL_CPU is not set
@@ -699,7 +644,7 @@ CONFIG_SYS_MMCSD_FS_BOOT_PARTITION=1
 # CONFIG_SPL_POST_MEM_SUPPORT is not set
 CONFIG_SPL_POWER=y
 # CONFIG_SPL_POWER_DOMAIN is not set
-# CONFIG_SPL_RAM_DEVICE is not set
+# CONFIG_SPL_RAM_SUPPORT is not set
 # CONFIG_SPL_REMOTEPROC is not set
 # CONFIG_SPL_RTC is not set
 # CONFIG_SPL_SATA is not set
@@ -762,19 +707,18 @@ CONFIG_BOOTM_NETBSD=y
 # CONFIG_BOOTM_OSE is not set
 CONFIG_BOOTM_PLAN9=y
 CONFIG_BOOTM_RTEMS=y
-# CONFIG_CMD_UPL is not set
 # CONFIG_CMD_VBE is not set
 CONFIG_BOOTM_VXWORKS=y
 CONFIG_CMD_BOOTEFI=y
 CONFIG_CMD_BOOTEFI_BINARY=y
 CONFIG_CMD_BOOTEFI_BOOTMGR=y
+CONFIG_CMD_BOOTEFI_HELLO_COMPILE=y
 # CONFIG_CMD_BOOTEFI_HELLO is not set
 # CONFIG_CMD_BOOTEFI_SELFTEST is not set
 # CONFIG_CMD_BOOTMENU is not set
 # CONFIG_CMD_ADTIMG is not set
 # CONFIG_CMD_ABOOTIMG is not set
 CONFIG_CMD_ELF=y
-CONFIG_CMD_ELF_BOOTVX=y
 # CONFIG_CMD_ELF_FDT_SETUP is not set
 CONFIG_CMD_FDT=y
 CONFIG_CMD_GO=y
@@ -864,10 +808,10 @@ CONFIG_CMD_MMC=y
 # CONFIG_CMD_BKOPS_ENABLE is not set
 # CONFIG_CMD_MMC_REG is not set
 # CONFIG_CMD_MMC_SWRITE is not set
-# CONFIG_MMC_SPEED_MODE_SET is not set
 # CONFIG_CMD_CLONE is not set
 # CONFIG_CMD_MTD is not set
 # CONFIG_CMD_ONENAND is not set
+# CONFIG_CMD_OSD is not set
 CONFIG_CMD_PART=y
 # CONFIG_CMD_PCI is not set
 CONFIG_CMD_PINMUX=y
@@ -895,8 +839,13 @@ CONFIG_CMD_SOURCE=y
 CONFIG_CMD_SETEXPR=y
 # CONFIG_CMD_SETEXPR_FMT is not set
 # CONFIG_CMD_XXD is not set
+
+#
+# Android support commands
+#
 CONFIG_CMD_NET=y
 CONFIG_CMD_BOOTP=y
+CONFIG_CMD_DHCP=y
 # CONFIG_BOOTP_MAY_FAIL is not set
 CONFIG_BOOTP_BOOTPATH=y
 # CONFIG_BOOTP_VENDOREX is not set
@@ -914,24 +863,23 @@ CONFIG_BOOTP_PXE=y
 CONFIG_BOOTP_PXE_CLIENTARCH=0x16
 # CONFIG_BOOTP_PXE_DHCP_OPTION is not set
 CONFIG_BOOTP_VCI_STRING="U-Boot.armv8"
+CONFIG_CMD_TFTPBOOT=y
 # CONFIG_CMD_TFTPPUT is not set
 # CONFIG_CMD_TFTPSRV is not set
 CONFIG_NET_TFTP_VARS=y
 # CONFIG_CMD_RARP is not set
 # CONFIG_CMD_NFS is not set
 # CONFIG_SYS_DISABLE_AUTOLOAD is not set
-# CONFIG_CMD_CDP is not set
-# CONFIG_CMD_SNTP is not set
-# CONFIG_CMD_LINK_LOCAL is not set
-# CONFIG_CMD_ETHSW is not set
-# CONFIG_CMD_WOL is not set
-CONFIG_CMD_DHCP=y
-# CONFIG_CMD_DNS is not set
+# CONFIG_CMD_WGET is not set
 CONFIG_CMD_MII=y
 CONFIG_CMD_PING=y
-CONFIG_CMD_TFTPBOOT=y
-# CONFIG_CMD_WGET is not set
+# CONFIG_CMD_CDP is not set
+# CONFIG_CMD_SNTP is not set
+# CONFIG_CMD_DNS is not set
+# CONFIG_CMD_LINK_LOCAL is not set
+# CONFIG_CMD_ETHSW is not set
 CONFIG_CMD_PXE=y
+# CONFIG_CMD_WOL is not set
 
 #
 # Misc commands
@@ -1007,6 +955,7 @@ CONFIG_CMD_CYCLIC=y
 # CONFIG_CMD_EVENT is not set
 # CONFIG_CMD_LOG is not set
 # CONFIG_CMD_UBI is not set
+# CONFIG_MMC_SPEED_MODE_SET is not set
 
 #
 # Partition Types
@@ -1014,7 +963,6 @@ CONFIG_CMD_CYCLIC=y
 CONFIG_PARTITIONS=y
 # CONFIG_MAC_PARTITION is not set
 # CONFIG_SPL_MAC_PARTITION is not set
-# CONFIG_TEGRA_PARTITION is not set
 CONFIG_DOS_PARTITION=y
 # CONFIG_SPL_DOS_PARTITION is not set
 CONFIG_ISO_PARTITION=y
@@ -1039,17 +987,14 @@ CONFIG_OF_CONTROL=y
 CONFIG_OF_REAL=y
 # CONFIG_SPL_OF_CONTROL is not set
 # CONFIG_OF_LIVE is not set
-CONFIG_OF_UPSTREAM=y
-# CONFIG_OF_UPSTREAM_BUILD_VENDOR is not set
-# CONFIG_OF_UPSTREAM_INCLUDE_LOCAL_FALLBACK_DTBOS is not set
+# CONFIG_OF_UPSTREAM is not set
 CONFIG_OF_SEPARATE=y
 # CONFIG_OF_EMBED is not set
 # CONFIG_OF_INITIAL_DTB_READONLY is not set
 # CONFIG_OF_BOARD is not set
 # CONFIG_OF_OMIT_DTB is not set
 CONFIG_DEVICE_TREE_INCLUDES=""
-CONFIG_OF_LIST="allwinner/sun50i-h618-orangepi-zero2w"
-CONFIG_OF_OVERLAY_LIST=""
+CONFIG_OF_LIST="sun50i-h618-orangepi-zero2w"
 # CONFIG_MULTI_DTB_FIT is not set
 CONFIG_OF_TAG_MIGRATE=y
 # CONFIG_OF_DTB_PROPS_REMOVE is not set
@@ -1096,20 +1041,17 @@ CONFIG_SYS_MMC_ENV_PART=0
 # CONFIG_USE_ETHPRIME is not set
 # CONFIG_USE_HOSTNAME is not set
 # CONFIG_VERSION_VARIABLE is not set
-
-#
-# Networking
-#
-# CONFIG_NO_NET is not set
 CONFIG_NET=y
-# CONFIG_NET_LWIP is not set
 CONFIG_ARP_TIMEOUT=5000
 CONFIG_NET_RETRY_COUNT=5
 # CONFIG_PROT_UDP is not set
+CONFIG_BOOTDEV_ETH=y
 # CONFIG_BOOTP_SEND_HOSTNAME is not set
+# CONFIG_NET_RANDOM_ETHADDR is not set
 # CONFIG_NETCONSOLE is not set
 # CONFIG_IP_DEFRAG is not set
 # CONFIG_SYS_FAULT_ECHO_LINK_DOWN is not set
+CONFIG_TFTP_BLOCKSIZE=1468
 # CONFIG_TFTP_PORT is not set
 CONFIG_TFTP_WINDOWSIZE=1
 # CONFIG_TFTP_TSIZE is not set
@@ -1126,9 +1068,6 @@ CONFIG_BOOTP_MAX_ROOT_PATH_LEN=64
 # CONFIG_USE_SERVERIP is not set
 # CONFIG_PROT_TCP is not set
 # CONFIG_IPV6 is not set
-CONFIG_BOOTDEV_ETH=y
-# CONFIG_NET_RANDOM_ETHADDR is not set
-CONFIG_TFTP_BLOCKSIZE=1468
 CONFIG_SYS_RX_ETH_BUFFER=4
 
 #
@@ -1211,7 +1150,6 @@ CONFIG_CLK=y
 # CONFIG_CLK_AT91 is not set
 # CONFIG_CLK_RCAR is not set
 # CONFIG_CLK_RCAR_CPG_LIB is not set
-# CONFIG_CLK_SOPHGO_CV1800B is not set
 CONFIG_CLK_SUNXI=y
 # CONFIG_CLK_SUNIV_F1C100S is not set
 # CONFIG_CLK_SUN4I_A10 is not set
@@ -1322,8 +1260,6 @@ CONFIG_GPIO=y
 # CONFIG_AT91_GPIO is not set
 # CONFIG_ATMEL_PIO4 is not set
 # CONFIG_ASPEED_GPIO is not set
-# CONFIG_ASPEED_SGPIO is not set
-# CONFIG_ASPEED_G7_GPIO is not set
 # CONFIG_DA8XX_GPIO is not set
 # CONFIG_FXL6408_GPIO is not set
 # CONFIG_HIKEY_GPIO is not set
@@ -1341,7 +1277,6 @@ CONFIG_GPIO=y
 # CONFIG_MXC_GPIO is not set
 # CONFIG_MXS_GPIO is not set
 # CONFIG_NPCM_GPIO is not set
-# CONFIG_NPCM_SGPIO is not set
 # CONFIG_CMD_PCA953X is not set
 # CONFIG_PCF8575_GPIO is not set
 # CONFIG_ROCKCHIP_GPIO is not set
@@ -1415,8 +1350,6 @@ CONFIG_DM_KEYBOARD=y
 # LED Support
 #
 # CONFIG_LED is not set
-# CONFIG_LED_BOOT is not set
-# CONFIG_LED_ACTIVITY is not set
 # CONFIG_LED_STATUS is not set
 
 #
@@ -1513,6 +1446,8 @@ CONFIG_MTD=y
 #
 CONFIG_DM_SPI_FLASH=y
 CONFIG_SPI_FLASH=y
+CONFIG_SF_DEFAULT_BUS=0
+CONFIG_SF_DEFAULT_CS=0
 # CONFIG_BOOTDEV_SPI_FLASH is not set
 # CONFIG_SPI_FLASH_SFDP_SUPPORT is not set
 CONFIG_SPI_FLASH_SMART_HWCAPS=y
@@ -1526,7 +1461,6 @@ CONFIG_SPI_FLASH_UNLOCK_ALL=y
 # CONFIG_SPI_FLASH_GIGADEVICE is not set
 # CONFIG_SPI_FLASH_ISSI is not set
 # CONFIG_SPI_FLASH_MACRONIX is not set
-# CONFIG_SPI_FLASH_PUYA is not set
 # CONFIG_SPI_FLASH_SILICONKAISER is not set
 # CONFIG_SPI_FLASH_SPANSION is not set
 # CONFIG_SPI_FLASH_STMICRO is not set
@@ -1740,7 +1674,6 @@ CONFIG_DM_REGULATOR_FIXED=y
 # CONFIG_DM_REGULATOR_GPIO is not set
 # CONFIG_DM_REGULATOR_PBIAS is not set
 # CONFIG_DM_REGULATOR_TPS62360 is not set
-# CONFIG_DM_REGULATOR_TPS6287X is not set
 # CONFIG_DM_REGULATOR_ANATOP is not set
 # CONFIG_DM_REGULATOR_SCMI is not set
 # CONFIG_SUNXI_NO_PMIC is not set
@@ -1790,6 +1723,7 @@ CONFIG_RESET_SUNXI=y
 # CONFIG_RTC_DS3231 is not set
 # CONFIG_RTC_PCF8563 is not set
 # CONFIG_RTC_PT7C4338 is not set
+# CONFIG_RTC_PL031 is not set
 # CONFIG_RTC_S35392A is not set
 # CONFIG_RTC_MC13XXX is not set
 # CONFIG_RTC_MC146818 is not set
@@ -1864,18 +1798,27 @@ CONFIG_SPI_MEM=y
 # CONFIG_ALTERA_SPI is not set
 # CONFIG_APPLE_SPI is not set
 # CONFIG_ATCSPI200_SPI is not set
+# CONFIG_ATMEL_SPI is not set
+# CONFIG_BCMSTB_SPI is not set
 # CONFIG_CORTINA_SFLASH is not set
 # CONFIG_CADENCE_QSPI is not set
+# CONFIG_CF_SPI is not set
 # CONFIG_CV1800B_SPIF is not set
 # CONFIG_DESIGNWARE_SPI is not set
+# CONFIG_EXYNOS_SPI is not set
+# CONFIG_FSL_DSPI is not set
 # CONFIG_FSL_QSPI is not set
 # CONFIG_GXP_SPI is not set
+# CONFIG_ICH_SPI is not set
 # CONFIG_IPROC_QSPI is not set
+# CONFIG_KIRKWOOD_SPI is not set
 # CONFIG_MICROCHIP_COREQSPI is not set
+# CONFIG_MPC8XXX_SPI is not set
 # CONFIG_MTK_SNOR is not set
 # CONFIG_MTK_SNFI_SPI is not set
 # CONFIG_MTK_SPIM is not set
 # CONFIG_MVEBU_A3700_SPI is not set
+# CONFIG_MXS_SPI is not set
 # CONFIG_SPI_MXIC is not set
 # CONFIG_NPCM_FIU_SPI is not set
 # CONFIG_NPCM_PSPI is not set
@@ -1889,11 +1832,17 @@ CONFIG_SPI_MEM=y
 # CONFIG_SOFT_SPI is not set
 # CONFIG_SPI_SN_F_OSPI is not set
 CONFIG_SPI_SUNXI=y
+# CONFIG_TEGRA114_SPI is not set
+# CONFIG_TEGRA20_SFLASH is not set
+# CONFIG_TEGRA20_SLINK is not set
+# CONFIG_TEGRA210_QSPI is not set
+# CONFIG_TI_QSPI is not set
 # CONFIG_XILINX_SPI is not set
 # CONFIG_ZYNQ_SPI is not set
 # CONFIG_ZYNQ_QSPI is not set
 # CONFIG_ZYNQMP_GQSPI is not set
-# CONFIG_SPI_STACKED_PARALLEL is not set
+# CONFIG_SH_QSPI is not set
+# CONFIG_MXC_SPI is not set
 
 #
 # SPMI support
@@ -1978,7 +1927,6 @@ CONFIG_USB_MUSB_FIXED_CONFIGDATA=y
 #
 # CONFIG_TWL4030_USB is not set
 # CONFIG_ROCKCHIP_USB2_PHY is not set
-# CONFIG_TYPEC_TCPM is not set
 
 #
 # ULPI drivers
@@ -2004,7 +1952,6 @@ CONFIG_USB_GADGET_PRODUCT_NUM=0x1010
 # CONFIG_USB_GADGET_ATMEL_USBA is not set
 # CONFIG_USB_GADGET_BCM_UDC_OTG_PHY is not set
 # CONFIG_USB_GADGET_DWC2_OTG is not set
-# CONFIG_USB_RENESAS_USBHS is not set
 # CONFIG_USB_GADGET_OS_DESCRIPTORS is not set
 # CONFIG_CI_UDC is not set
 # CONFIG_USB_GADGET_MAX3420 is not set
@@ -2064,7 +2011,6 @@ CONFIG_WDT=y
 # CONFIG_WDT_ATCWDT200 is not set
 # CONFIG_WDT_CDNS is not set
 # CONFIG_WDT_CORTINA is not set
-# CONFIG_WDT_DAVINCI is not set
 # CONFIG_WDT_GPIO is not set
 # CONFIG_WDT_MAX6370 is not set
 # CONFIG_WDT_MCF is not set
@@ -2138,19 +2084,6 @@ CONFIG_SUPPORT_ACPI=y
 # CONFIG_CMD_DHRYSTONE is not set
 
 #
-# Alternative crypto libraries
-#
-CONFIG_LEGACY_CRYPTO=y
-# CONFIG_MBEDTLS_LIB is not set
-CONFIG_LEGACY_CRYPTO_BASIC=y
-CONFIG_SHA1_LEGACY=y
-CONFIG_SHA256_LEGACY=y
-CONFIG_MD5_LEGACY=y
-CONFIG_SPL_SHA1_LEGACY=y
-CONFIG_SPL_SHA256_LEGACY=y
-CONFIG_LEGACY_CRYPTO_CERT=y
-
-#
 # Security support
 #
 # CONFIG_AES is not set
@@ -2210,6 +2143,7 @@ CONFIG_OF_LIBFDT=y
 CONFIG_OF_LIBFDT_ASSUME_MASK=0x0
 CONFIG_SYS_FDT_PAD=0x3000
 CONFIG_SPL_OF_LIBFDT=y
+CONFIG_SPL_OF_LIBFDT_ASSUME_MASK=0xff
 
 #
 # System tables
@@ -2219,13 +2153,39 @@ CONFIG_GENERATE_SMBIOS_TABLE=y
 # CONFIG_SPL_LIB_RATIONAL is not set
 CONFIG_SMBIOS=y
 # CONFIG_SMBIOS_PARSER is not set
+CONFIG_EFI_LOADER=y
+CONFIG_EFI_BINARY_EXEC=y
+CONFIG_EFI_BOOTMGR=y
+CONFIG_EFI_VARIABLE_FILE_STORE=y
+# CONFIG_EFI_RT_VOLATILE_STORE is not set
+# CONFIG_EFI_VARIABLE_NO_STORE is not set
+# CONFIG_EFI_VARIABLES_PRESEED is not set
+CONFIG_EFI_VAR_BUF_SIZE=131072
+# CONFIG_EFI_SCROLL_ON_CLEAR_SCREEN is not set
+# CONFIG_EFI_RUNTIME_UPDATE_CAPSULE is not set
+# CONFIG_EFI_CAPSULE_ON_DISK is not set
+CONFIG_EFI_CAPSULE_MAX=15
+CONFIG_EFI_DEVICE_PATH_TO_TEXT=y
+CONFIG_EFI_DEVICE_PATH_UTIL=y
+CONFIG_EFI_DT_FIXUP=y
+CONFIG_EFI_LOADER_HII=y
+CONFIG_EFI_UNICODE_COLLATION_PROTOCOL2=y
+CONFIG_EFI_UNICODE_CAPITALIZATION=y
+# CONFIG_EFI_LOADER_BOUNCE_BUFFER is not set
+CONFIG_EFI_PLATFORM_LANG_CODES="en-US"
+CONFIG_EFI_HAVE_RUNTIME_RESET=y
+CONFIG_EFI_LOAD_FILE2_INITRD=y
+CONFIG_EFI_ECPT=y
+CONFIG_EFI_EBBR_2_1_CONFORMANCE=y
+# CONFIG_EFI_HTTP_BOOT is not set
 # CONFIG_OPTEE_LIB is not set
 # CONFIG_OPTEE_IMAGE is not set
 # CONFIG_BOOTM_OPTEE is not set
 # CONFIG_TEST_FDTDEC is not set
 CONFIG_LIB_ELF=y
 CONFIG_LMB=y
-# CONFIG_LMB_ARCH_MEM_MAP is not set
+CONFIG_LMB_USE_MAX_REGIONS=y
+CONFIG_LMB_MAX_REGIONS=16
 # CONFIG_PHANDLE_CHECK_SEQ is not set
 
 #
