Disabled a lot of stuff, notably networking and USB.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22554 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/OrangePiZero2W/uboot/uboot.config
+++ b/boot/OrangePiZero2W/uboot/uboot.config
@@ -194,8 +194,6 @@ CONFIG_ENV_SOURCE_FILE=""
 CONFIG_SF_DEFAULT_SPEED=1000000
 CONFIG_SF_DEFAULT_MODE=0x0
 CONFIG_ENV_SIZE=0x10000
-CONFIG_ENV_OFFSET=0xF0000
-CONFIG_ENV_SECT_SIZE=0x10000
 CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="sun50i-h618-orangepi-zero2w"
 CONFIG_SPL_TEXT_BASE=0x20060
@@ -318,7 +316,6 @@ CONFIG_PSCI_RESET=y
 CONFIG_IMX_DCD_ADDR=0x00910000
 CONFIG_SYS_MEM_TOP_HIDE=0x0
 CONFIG_SYS_LOAD_ADDR=0x42000000
-CONFIG_ENV_ADDR=0x0
 
 #
 # ARM debug
@@ -410,9 +407,6 @@ CONFIG_SPL_LOAD_FIT_ADDRESS=0x0
 CONFIG_SPL_FIT_SOURCE=""
 # CONFIG_USE_SPL_FIT_GENERATOR is not set
 CONFIG_PXE_UTILS=y
-CONFIG_BOOT_DEFAULTS_FEATURES=y
-CONFIG_BOOT_DEFAULTS_CMDS=y
-CONFIG_BOOT_DEFAULTS=y
 CONFIG_BOOTSTD=y
 # CONFIG_BOOTSTD_FULL is not set
 # CONFIG_BOOTSTD_DEFAULTS is not set
@@ -421,9 +415,6 @@ CONFIG_BOOTMETH_GLOBAL=y
 # CONFIG_BOOTMETH_ANDROID is not set
 # CONFIG_BOOTMETH_CROS is not set
 CONFIG_BOOTMETH_EXTLINUX=y
-CONFIG_BOOTMETH_EXTLINUX_PXE=y
-CONFIG_BOOTMETH_EFILOADER=y
-CONFIG_BOOTMETH_EFI_BOOTMGR=y
 CONFIG_BOOTMETH_VBE=y
 # CONFIG_SPL_BOOTMETH_VBE is not set
 CONFIG_BOOTMETH_VBE_REQUEST=y
@@ -439,7 +430,7 @@ CONFIG_SUPPORT_RAW_INITRD=y
 # CONFIG_CHROMEOS_VBOOT is not set
 # CONFIG_RAMBOOT_PBL is not set
 CONFIG_SYS_BOOT_RAMDISK_HIGH=y
-CONFIG_DISTRO_DEFAULTS=y
+# CONFIG_DISTRO_DEFAULTS is not set
 
 #
 # Boot timing
@@ -485,8 +476,7 @@ CONFIG_OF_BOARD_SETUP=y
 CONFIG_ARCH_FIXUP_FDT_MEMORY=y
 # CONFIG_USE_BOOTARGS is not set
 # CONFIG_BOOTARGS_SUBST is not set
-CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="run distro_bootcmd"
+# CONFIG_USE_BOOTCOMMAND is not set
 CONFIG_USE_PREBOOT=y
 CONFIG_PREBOOT="usb start"
 CONFIG_PREBOOT_DEFINED=y
@@ -542,7 +532,6 @@ CONFIG_CYCLIC=y
 CONFIG_SPL_CYCLIC=y
 CONFIG_CYCLIC_MAX_CPU_TIME_US=5000
 CONFIG_EVENT=y
-CONFIG_EVENT_DYNAMIC=y
 # CONFIG_EVENT_DEBUG is not set
 # CONFIG_ARCH_MISC_INIT is not set
 # CONFIG_BOARD_EARLY_INIT_F is not set
@@ -687,39 +676,29 @@ CONFIG_CMD_CONSOLE=y
 # CONFIG_CMD_HISTORY is not set
 # CONFIG_CMD_LICENSE is not set
 # CONFIG_CMD_PMC is not set
-# CONFIG_CMD_SMBIOS is not set
 
 #
 # Boot commands
 #
-CONFIG_CMD_BOOTD=y
+# CONFIG_CMD_BOOTD is not set
 CONFIG_CMD_BOOTM=y
 # CONFIG_CMD_BOOTDEV is not set
 CONFIG_CMD_BOOTFLOW=y
 # CONFIG_CMD_BOOTMETH is not set
-CONFIG_BOOTM_EFI=y
-CONFIG_BOOTM_ELF=y
 # CONFIG_CMD_BOOTZ is not set
 CONFIG_CMD_BOOTI=y
 CONFIG_BOOTM_LINUX=y
-CONFIG_BOOTM_NETBSD=y
+# CONFIG_BOOTM_NETBSD is not set
 # CONFIG_BOOTM_OPENRTOS is not set
 # CONFIG_BOOTM_OSE is not set
-CONFIG_BOOTM_PLAN9=y
-CONFIG_BOOTM_RTEMS=y
+# CONFIG_BOOTM_PLAN9 is not set
+# CONFIG_BOOTM_RTEMS is not set
 # CONFIG_CMD_VBE is not set
-CONFIG_BOOTM_VXWORKS=y
-CONFIG_CMD_BOOTEFI=y
-CONFIG_CMD_BOOTEFI_BINARY=y
-CONFIG_CMD_BOOTEFI_BOOTMGR=y
-CONFIG_CMD_BOOTEFI_HELLO_COMPILE=y
-# CONFIG_CMD_BOOTEFI_HELLO is not set
-# CONFIG_CMD_BOOTEFI_SELFTEST is not set
+# CONFIG_BOOTM_VXWORKS is not set
 # CONFIG_CMD_BOOTMENU is not set
 # CONFIG_CMD_ADTIMG is not set
 # CONFIG_CMD_ABOOTIMG is not set
-CONFIG_CMD_ELF=y
-# CONFIG_CMD_ELF_FDT_SETUP is not set
+# CONFIG_CMD_ELF is not set
 CONFIG_CMD_FDT=y
 CONFIG_CMD_GO=y
 CONFIG_CMD_RUN=y
@@ -727,7 +706,6 @@ CONFIG_CMD_IMI=y
 CONFIG_CMD_XIMG=y
 CONFIG_SYS_XIMG_LEN=0x800000
 # CONFIG_CMD_SPL is not set
-# CONFIG_CMD_THOR_DOWNLOAD is not set
 
 #
 # Environment commands
@@ -742,7 +720,6 @@ CONFIG_CMD_SAVEENV=y
 CONFIG_CMD_ENV_EXISTS=y
 # CONFIG_CMD_ENV_CALLBACK is not set
 # CONFIG_CMD_ENV_FLAGS is not set
-# CONFIG_CMD_NVEDIT_EFI is not set
 # CONFIG_CMD_NVEDIT_INDIRECT is not set
 # CONFIG_CMD_NVEDIT_INFO is not set
 # CONFIG_CMD_NVEDIT_LOAD is not set
@@ -785,12 +762,10 @@ CONFIG_CMD_BIND=y
 # CONFIG_CMD_DEMO is not set
 # CONFIG_CMD_DFU is not set
 CONFIG_CMD_DM=y
-CONFIG_CMD_FASTBOOT=y
 # CONFIG_CMD_FUSE is not set
 CONFIG_CMD_GPIO=y
 # CONFIG_CMD_GPIO_READ is not set
-CONFIG_CMD_GPT=y
-# CONFIG_CMD_GPT_RENAME is not set
+# CONFIG_CMD_GPT is not set
 # CONFIG_CMD_IDE is not set
 # CONFIG_CMD_IO is not set
 # CONFIG_CMD_IOTRACE is not set
@@ -822,10 +797,8 @@ CONFIG_CMD_POWEROFF=y
 CONFIG_CMD_SF=y
 # CONFIG_CMD_SF_TEST is not set
 # CONFIG_CMD_SPI is not set
-CONFIG_CMD_USB=y
 # CONFIG_CMD_USB_SDP is not set
 # CONFIG_CMD_RKMTD is not set
-# CONFIG_CMD_USB_MASS_STORAGE is not set
 # CONFIG_CMD_WDT is not set
 # CONFIG_CMD_WRITE is not set
 
@@ -843,43 +816,6 @@ CONFIG_CMD_SETEXPR=y
 #
 # Android support commands
 #
-CONFIG_CMD_NET=y
-CONFIG_CMD_BOOTP=y
-CONFIG_CMD_DHCP=y
-# CONFIG_BOOTP_MAY_FAIL is not set
-CONFIG_BOOTP_BOOTPATH=y
-# CONFIG_BOOTP_VENDOREX is not set
-# CONFIG_BOOTP_BOOTFILESIZE is not set
-CONFIG_BOOTP_DNS=y
-# CONFIG_BOOTP_DNS2 is not set
-CONFIG_BOOTP_GATEWAY=y
-CONFIG_BOOTP_HOSTNAME=y
-# CONFIG_BOOTP_PREFER_SERVERIP is not set
-CONFIG_BOOTP_SUBNETMASK=y
-# CONFIG_BOOTP_NISDOMAIN is not set
-# CONFIG_BOOTP_NTPSERVER is not set
-# CONFIG_CMD_PCAP is not set
-CONFIG_BOOTP_PXE=y
-CONFIG_BOOTP_PXE_CLIENTARCH=0x16
-# CONFIG_BOOTP_PXE_DHCP_OPTION is not set
-CONFIG_BOOTP_VCI_STRING="U-Boot.armv8"
-CONFIG_CMD_TFTPBOOT=y
-# CONFIG_CMD_TFTPPUT is not set
-# CONFIG_CMD_TFTPSRV is not set
-CONFIG_NET_TFTP_VARS=y
-# CONFIG_CMD_RARP is not set
-# CONFIG_CMD_NFS is not set
-# CONFIG_SYS_DISABLE_AUTOLOAD is not set
-# CONFIG_CMD_WGET is not set
-CONFIG_CMD_MII=y
-CONFIG_CMD_PING=y
-# CONFIG_CMD_CDP is not set
-# CONFIG_CMD_SNTP is not set
-# CONFIG_CMD_DNS is not set
-# CONFIG_CMD_LINK_LOCAL is not set
-# CONFIG_CMD_ETHSW is not set
-CONFIG_CMD_PXE=y
-# CONFIG_CMD_WOL is not set
 
 #
 # Misc commands
@@ -890,8 +826,6 @@ CONFIG_CMD_BLOCK_CACHE=y
 # CONFIG_CMD_CACHE is not set
 # CONFIG_CMD_CONITRACE is not set
 # CONFIG_CMD_CLS is not set
-# CONFIG_CMD_EFIDEBUG is not set
-CONFIG_CMD_EFICONFIG=y
 # CONFIG_CMD_EXCEPTION is not set
 # CONFIG_CMD_INI is not set
 # CONFIG_CMD_DATE is not set
@@ -934,9 +868,8 @@ CONFIG_CMD_SYSBOOT=y
 #
 # CONFIG_CMD_BTRFS is not set
 # CONFIG_CMD_EROFS is not set
-CONFIG_CMD_EXT2=y
-CONFIG_CMD_EXT4=y
-# CONFIG_CMD_EXT4_WRITE is not set
+# CONFIG_CMD_EXT2 is not set
+# CONFIG_CMD_EXT4 is not set
 CONFIG_CMD_FAT=y
 # CONFIG_CMD_SQUASHFS is not set
 CONFIG_CMD_FS_GENERIC=y
@@ -965,16 +898,13 @@ CONFIG_PARTITIONS=y
 # CONFIG_SPL_MAC_PARTITION is not set
 CONFIG_DOS_PARTITION=y
 # CONFIG_SPL_DOS_PARTITION is not set
-CONFIG_ISO_PARTITION=y
+# CONFIG_ISO_PARTITION is not set
 # CONFIG_SPL_ISO_PARTITION is not set
 # CONFIG_AMIGA_PARTITION is not set
 # CONFIG_SPL_AMIGA_PARTITION is not set
-CONFIG_EFI_PARTITION=y
-CONFIG_EFI_PARTITION_ENTRIES_NUMBERS=56
-CONFIG_EFI_PARTITION_ENTRIES_OFF=0
+# CONFIG_EFI_PARTITION is not set
 # CONFIG_SPL_EFI_PARTITION is not set
 CONFIG_PARTITION_UUIDS=y
-# CONFIG_PARTITION_TYPE_GUID is not set
 CONFIG_SUPPORT_OF_CONTROL=y
 CONFIG_PYLIBFDT=y
 CONFIG_DTOC=y
@@ -1017,13 +947,7 @@ CONFIG_ENV_IS_IN_FAT=y
 # CONFIG_ENV_IS_IN_NAND is not set
 # CONFIG_ENV_IS_IN_NVRAM is not set
 # CONFIG_ENV_IS_IN_REMOTE is not set
-CONFIG_ENV_IS_IN_SPI_FLASH=y
-# CONFIG_ENV_SECT_SIZE_AUTO is not set
-CONFIG_ENV_SPI_BUS=0
-CONFIG_ENV_SPI_CS=0
-CONFIG_ENV_SPI_MAX_HZ=1000000
-CONFIG_ENV_SPI_MODE=0x0
-# CONFIG_ENV_SPI_EARLY is not set
+# CONFIG_ENV_IS_IN_SPI_FLASH is not set
 # CONFIG_SYS_REDUNDAND_ENVIRONMENT is not set
 CONFIG_ENV_FAT_INTERFACE="mmc"
 CONFIG_ENV_FAT_DEVICE_AND_PART=":auto"
@@ -1041,33 +965,7 @@ CONFIG_SYS_MMC_ENV_PART=0
 # CONFIG_USE_ETHPRIME is not set
 # CONFIG_USE_HOSTNAME is not set
 # CONFIG_VERSION_VARIABLE is not set
-CONFIG_NET=y
-CONFIG_ARP_TIMEOUT=5000
-CONFIG_NET_RETRY_COUNT=5
-# CONFIG_PROT_UDP is not set
-CONFIG_BOOTDEV_ETH=y
-# CONFIG_BOOTP_SEND_HOSTNAME is not set
-# CONFIG_NET_RANDOM_ETHADDR is not set
-# CONFIG_NETCONSOLE is not set
-# CONFIG_IP_DEFRAG is not set
-# CONFIG_SYS_FAULT_ECHO_LINK_DOWN is not set
-CONFIG_TFTP_BLOCKSIZE=1468
-# CONFIG_TFTP_PORT is not set
-CONFIG_TFTP_WINDOWSIZE=1
-# CONFIG_TFTP_TSIZE is not set
-# CONFIG_SERVERIP_FROM_PROXYDHCP is not set
-CONFIG_SERVERIP_FROM_PROXYDHCP_DELAY_MS=100
-# CONFIG_KEEP_SERVERADDR is not set
-# CONFIG_UDP_CHECKSUM is not set
-# CONFIG_BOOTP_SERVERIP is not set
-CONFIG_BOOTP_MAX_ROOT_PATH_LEN=64
-# CONFIG_USE_GATEWAYIP is not set
-# CONFIG_USE_IPADDR is not set
-# CONFIG_USE_NETMASK is not set
-# CONFIG_USE_ROOTPATH is not set
-# CONFIG_USE_SERVERIP is not set
-# CONFIG_PROT_TCP is not set
-# CONFIG_IPV6 is not set
+# CONFIG_NET is not set
 CONFIG_SYS_RX_ETH_BUFFER=4
 
 #
@@ -1083,7 +981,6 @@ CONFIG_DM=y
 # CONFIG_DM_DEBUG is not set
 # CONFIG_DM_STATS is not set
 CONFIG_DM_DEVICE_REMOVE=y
-CONFIG_DM_EVENT=y
 CONFIG_DM_STDIO=y
 CONFIG_DM_SEQ_ALIAS=y
 # CONFIG_DM_DMA is not set
@@ -1214,24 +1111,6 @@ CONFIG_SYS_SPD_BUS_NUM=0
 #
 # Fastboot support
 #
-CONFIG_FASTBOOT=y
-CONFIG_USB_FUNCTION_FASTBOOT=y
-# CONFIG_UDP_FUNCTION_FASTBOOT is not set
-# CONFIG_TCP_FUNCTION_FASTBOOT is not set
-CONFIG_FASTBOOT_BUF_ADDR=0x42000000
-CONFIG_FASTBOOT_BUF_SIZE=0x2000000
-CONFIG_FASTBOOT_USB_DEV=0
-CONFIG_FASTBOOT_FLASH=y
-# CONFIG_FASTBOOT_UUU_SUPPORT is not set
-CONFIG_FASTBOOT_FLASH_MMC=y
-CONFIG_FASTBOOT_FLASH_MMC_DEV=0
-# CONFIG_FASTBOOT_MMC_BOOT_SUPPORT is not set
-# CONFIG_FASTBOOT_MMC_USER_SUPPORT is not set
-CONFIG_FASTBOOT_GPT_NAME="gpt"
-CONFIG_FASTBOOT_MBR_NAME="mbr"
-# CONFIG_FASTBOOT_CMD_OEM_FORMAT is not set
-# CONFIG_FASTBOOT_OEM_RUN is not set
-# CONFIG_FASTBOOT_OEM_BOARD is not set
 CONFIG_FIRMWARE=y
 # CONFIG_SPL_FIRMWARE is not set
 CONFIG_ARM_PSCI_FW=y
@@ -1487,60 +1366,11 @@ CONFIG_SPI_FLASH_USE_4K_SECTORS=y
 # CONFIG_MULTIPLEXER is not set
 # CONFIG_BITBANGMII is not set
 # CONFIG_MV88E6352_SWITCH is not set
-# CONFIG_PHYLIB is not set
 # CONFIG_FSL_MEMAC is not set
 CONFIG_PHY_RESET_DELAY=0
 # CONFIG_FSL_PFE is not set
 CONFIG_ETH=y
-CONFIG_DM_ETH=y
 # CONFIG_DM_ETH_PHY is not set
-CONFIG_NETDEVICES=y
-# CONFIG_PHY_GIGE is not set
-# CONFIG_ALTERA_TSE is not set
-# CONFIG_BCM_SF2_ETH is not set
-# CONFIG_BCMGENET is not set
-# CONFIG_BNXT_ETH is not set
-# CONFIG_CALXEDA_XGMAC is not set
-# CONFIG_DWC_ETH_XGMAC is not set
-# CONFIG_DRIVER_DM9000 is not set
-# CONFIG_DWC_ETH_QOS is not set
-# CONFIG_EEPRO100 is not set
-# CONFIG_ETH_DESIGNWARE is not set
-# CONFIG_ETH_DESIGNWARE_MESON8B is not set
-# CONFIG_ETHOC is not set
-# CONFIG_FMAN_ENET is not set
-# CONFIG_FTMAC100 is not set
-# CONFIG_FTGMAC100 is not set
-# CONFIG_MCFFEC is not set
-# CONFIG_KS8851_MLL is not set
-# CONFIG_LITEETH is not set
-# CONFIG_MACB is not set
-# CONFIG_NET_NPCM750 is not set
-# CONFIG_PCH_GBE is not set
-# CONFIG_RGMII is not set
-# CONFIG_MII is not set
-# CONFIG_RMII is not set
-# CONFIG_PCNET is not set
-# CONFIG_QE_UEC is not set
-# CONFIG_RTL8139 is not set
-# CONFIG_SMC911X is not set
-# CONFIG_SUN7I_GMAC is not set
-# CONFIG_SUN4I_EMAC is not set
-# CONFIG_SUN8I_EMAC is not set
-# CONFIG_SH_ETHER is not set
-# CONFIG_DRIVER_TI_CPSW is not set
-# CONFIG_DRIVER_TI_EMAC is not set
-# CONFIG_DRIVER_TI_KEYSTONE_NET is not set
-# CONFIG_TULIP is not set
-# CONFIG_XILINX_AXIEMAC is not set
-# CONFIG_VSC7385_ENET is not set
-# CONFIG_XILINX_EMACLITE is not set
-# CONFIG_ZYNQ_GEM is not set
-# CONFIG_SYS_DPAA_QBMAN is not set
-# CONFIG_TSEC_ENET is not set
-# CONFIG_MEDIATEK_ETH is not set
-# CONFIG_HIFEMAC_ETH is not set
-# CONFIG_HIGMACV300_ETH is not set
 # CONFIG_NVME is not set
 # CONFIG_NVME_APPLE is not set
 
@@ -1566,8 +1396,7 @@ CONFIG_PHY=y
 # CONFIG_PHY_CADENCE_SIERRA is not set
 # CONFIG_PHY_CADENCE_TORRENT is not set
 # CONFIG_MSM8916_USB_PHY is not set
-CONFIG_PHY_SUN4I_USB=y
-CONFIG_INITIAL_USB_SCAN_DELAY=0
+# CONFIG_PHY_SUN4I_USB is not set
 # CONFIG_PHY_SUN50I_USB3 is not set
 # CONFIG_MVEBU_COMPHY_SUPPORT is not set
 
@@ -1876,99 +1705,7 @@ CONFIG_SYSRESET_WATCHDOG_AUTO=y
 #
 # TPM support
 #
-CONFIG_USB=y
-CONFIG_DM_USB=y
-# CONFIG_DM_USB_GADGET is not set
-
-#
-# USB Host Controller Drivers
-#
-CONFIG_USB_HOST=y
-# CONFIG_SPL_USB_HOST is not set
-# CONFIG_USB_XHCI_HCD is not set
-CONFIG_USB_EHCI_HCD=y
-# CONFIG_USB_EHCI_MSM is not set
-# CONFIG_USB_EHCI_PCI is not set
-# CONFIG_USB_EHCI_ZYNQ is not set
-CONFIG_USB_EHCI_GENERIC=y
-# CONFIG_USB_EHCI_FSL is not set
-CONFIG_USB_OHCI_NEW=y
-CONFIG_USB_OHCI_HCD=y
-CONFIG_USB_OHCI_GENERIC=y
-# CONFIG_USB_OHCI_DA8XX is not set
-# CONFIG_SYS_OHCI_SWAP_REG_ACCESS is not set
-# CONFIG_USB_UHCI_HCD is not set
-# CONFIG_USB_DWC2 is not set
-# CONFIG_USB_R8A66597_HCD is not set
-# CONFIG_USB_ISP1760 is not set
-# CONFIG_USB_CDNS3 is not set
-# CONFIG_USB_DWC3 is not set
-
-#
-# Legacy MUSB Support
-#
-# CONFIG_USB_MUSB_HCD is not set
-# CONFIG_USB_MUSB_UDC is not set
-
-#
-# MUSB Controller Driver
-#
-# CONFIG_USB_MUSB_HOST is not set
-CONFIG_USB_MUSB_GADGET=y
-# CONFIG_USB_MUSB_AM35X is not set
-# CONFIG_USB_MUSB_DSPS is not set
-CONFIG_USB_MUSB_SUNXI=y
-CONFIG_USB_MUSB_DISABLE_BULK_COMBINE_SPLIT=y
-CONFIG_USB_MUSB_PIO_ONLY=y
-CONFIG_USB_MUSB_FIXED_CONFIGDATA=y
-
-#
-# USB Phy
-#
-# CONFIG_TWL4030_USB is not set
-# CONFIG_ROCKCHIP_USB2_PHY is not set
-
-#
-# ULPI drivers
-#
-
-#
-# USB peripherals
-#
-CONFIG_USB_STORAGE=y
-CONFIG_USB_KEYBOARD=y
-# CONFIG_USB_ONBOARD_HUB is not set
-CONFIG_USB_HUB_DEBOUNCE_TIMEOUT=1000
-CONFIG_USB_KEYBOARD_FN_KEYS=y
-# CONFIG_SYS_USB_EVENT_POLL is not set
-CONFIG_SYS_USB_EVENT_POLL_VIA_INT_QUEUE=y
-# CONFIG_SYS_USB_EVENT_POLL_VIA_CONTROL_EP is not set
-# CONFIG_USB_HOST_ETHER is not set
-CONFIG_USB_GADGET=y
-# CONFIG_SPL_USB_GADGET is not set
-CONFIG_USB_GADGET_MANUFACTURER="Allwinner Technology"
-CONFIG_USB_GADGET_VENDOR_NUM=0x1f3a
-CONFIG_USB_GADGET_PRODUCT_NUM=0x1010
-# CONFIG_USB_GADGET_ATMEL_USBA is not set
-# CONFIG_USB_GADGET_BCM_UDC_OTG_PHY is not set
-# CONFIG_USB_GADGET_DWC2_OTG is not set
-# CONFIG_USB_GADGET_OS_DESCRIPTORS is not set
-# CONFIG_CI_UDC is not set
-# CONFIG_USB_GADGET_MAX3420 is not set
-CONFIG_USB_GADGET_VBUS_DRAW=2
-CONFIG_SDP_LOADADDR=0x0
-CONFIG_USB_GADGET_DUALSPEED=y
-CONFIG_USB_GADGET_DOWNLOAD=y
-# CONFIG_USB_FUNCTION_MASS_STORAGE is not set
-# CONFIG_USB_FUNCTION_ROCKUSB is not set
-# CONFIG_USB_FUNCTION_SDP is not set
-# CONFIG_USB_FUNCTION_THOR is not set
-# CONFIG_USB_FUNCTION_ACM is not set
-CONFIG_USB_ETHER=y
-# CONFIG_USB_ETH_CDC is not set
-CONFIG_USB_ETH_RNDIS=y
-CONFIG_USBNET_DEV_ADDR="de:ad:be:ef:00:01"
-CONFIG_USBNET_HOST_ADDR="de:ad:be:ef:00:00"
+# CONFIG_USB is not set
 
 #
 # UFS Host Controller Support
@@ -2032,8 +1769,7 @@ CONFIG_WDT_SUNXI=y
 # CONFIG_FS_BTRFS is not set
 # CONFIG_FS_CBFS is not set
 # CONFIG_SPL_FS_CBFS is not set
-CONFIG_FS_EXT4=y
-# CONFIG_EXT4_WRITE is not set
+# CONFIG_FS_EXT4 is not set
 CONFIG_FS_FAT=y
 CONFIG_FAT_WRITE=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
@@ -2054,7 +1790,6 @@ CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
 # CONFIG_BCH is not set
 CONFIG_BINMAN_FDT=y
 # CONFIG_CC_OPTIMIZE_LIBS_FOR_SPEED is not set
-CONFIG_CHARSET=y
 # CONFIG_DYNAMIC_CRC_TABLE is not set
 CONFIG_LIB_UUID=y
 CONFIG_RANDOM_UUID=y
@@ -2066,8 +1801,6 @@ CONFIG_SPRINTF=y
 CONFIG_SPL_SPRINTF=y
 CONFIG_STRTO=y
 CONFIG_SPL_STRTO=y
-CONFIG_IMAGE_SPARSE=y
-CONFIG_IMAGE_SPARSE_FILLBUF_SIZE=0x80000
 CONFIG_SYS_HZ=1000
 CONFIG_SPL_USE_TINY_PRINTF=y
 # CONFIG_PANIC_HANG is not set
@@ -2148,41 +1881,14 @@ CONFIG_SPL_OF_LIBFDT_ASSUME_MASK=0xff
 #
 # System tables
 #
-CONFIG_GENERATE_SMBIOS_TABLE=y
 # CONFIG_LIB_RATIONAL is not set
 # CONFIG_SPL_LIB_RATIONAL is not set
-CONFIG_SMBIOS=y
 # CONFIG_SMBIOS_PARSER is not set
-CONFIG_EFI_LOADER=y
-CONFIG_EFI_BINARY_EXEC=y
-CONFIG_EFI_BOOTMGR=y
-CONFIG_EFI_VARIABLE_FILE_STORE=y
-# CONFIG_EFI_RT_VOLATILE_STORE is not set
-# CONFIG_EFI_VARIABLE_NO_STORE is not set
-# CONFIG_EFI_VARIABLES_PRESEED is not set
-CONFIG_EFI_VAR_BUF_SIZE=131072
-# CONFIG_EFI_SCROLL_ON_CLEAR_SCREEN is not set
-# CONFIG_EFI_RUNTIME_UPDATE_CAPSULE is not set
-# CONFIG_EFI_CAPSULE_ON_DISK is not set
-CONFIG_EFI_CAPSULE_MAX=15
-CONFIG_EFI_DEVICE_PATH_TO_TEXT=y
-CONFIG_EFI_DEVICE_PATH_UTIL=y
-CONFIG_EFI_DT_FIXUP=y
-CONFIG_EFI_LOADER_HII=y
-CONFIG_EFI_UNICODE_COLLATION_PROTOCOL2=y
-CONFIG_EFI_UNICODE_CAPITALIZATION=y
-# CONFIG_EFI_LOADER_BOUNCE_BUFFER is not set
-CONFIG_EFI_PLATFORM_LANG_CODES="en-US"
-CONFIG_EFI_HAVE_RUNTIME_RESET=y
-CONFIG_EFI_LOAD_FILE2_INITRD=y
-CONFIG_EFI_ECPT=y
-CONFIG_EFI_EBBR_2_1_CONFORMANCE=y
-# CONFIG_EFI_HTTP_BOOT is not set
+# CONFIG_EFI_LOADER is not set
 # CONFIG_OPTEE_LIB is not set
 # CONFIG_OPTEE_IMAGE is not set
 # CONFIG_BOOTM_OPTEE is not set
 # CONFIG_TEST_FDTDEC is not set
-CONFIG_LIB_ELF=y
 CONFIG_LMB=y
 CONFIG_LMB_USE_MAX_REGIONS=y
 CONFIG_LMB_MAX_REGIONS=16
