Set CONFIG_PREBOOT to ""
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22555 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/OrangePiZero2W/uboot/uboot.config
+++ b/boot/OrangePiZero2W/uboot/uboot.config
@@ -478,8 +478,7 @@ CONFIG_ARCH_FIXUP_FDT_MEMORY=y
 # CONFIG_BOOTARGS_SUBST is not set
 # CONFIG_USE_BOOTCOMMAND is not set
 CONFIG_USE_PREBOOT=y
-CONFIG_PREBOOT="usb start"
-CONFIG_PREBOOT_DEFINED=y
+CONFIG_PREBOOT=""
 CONFIG_DEFAULT_FDT_FILE=""
 # CONFIG_SAVE_PREV_BL_FDT_ADDR is not set
 # CONFIG_SAVE_PREV_BL_INITRAMFS_START_ADDR is not set
