Rename Orange Pi Zero 2 W device tree blob
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22560 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -65,6 +65,10 @@ ifeq ($(BOARDBASE), BeagleBone)
 	cp $(MUNTSOS)/boot/BeagleBone/overlays/*.dtbo $(DESTDIR)/overlays
 endif
 
+ifneq ($(findstring OrangePi, $(BOARDNAME)),)
+	cd $(DESTDIR) && mv $(shell basename $(KERNEL_DTB)).dtb $(BOARDNAME).dtb
+endif
+
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
 	$(MAKE) -C $(MUNTSOS)/boot/RaspberryPi/overlays DTC=$(KERNEL_DTC)
 	mkdir -p $(DESTDIR)/overlays
