Added more Orange Pi Zero 2 W stuff.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22564 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -65,8 +65,11 @@ ifeq ($(BOARDBASE), BeagleBone)
 	cp $(MUNTSOS)/boot/BeagleBone/overlays/*.dtbo $(DESTDIR)/overlays
 endif
 
-ifneq ($(findstring OrangePi, $(BOARDNAME)),)
+ifeq ($(BOARDBASE), OrangePiZero2W)
 	cd $(DESTDIR) && mv $(shell basename $(KERNEL_DTB)).dtb $(BOARDNAME).dtb
+	$(MAKE) -C $(MUNTSOS)/boot/OrangePiZero2W/overlays DTC=$(KERNEL_DTC)
+	mkdir -p $(DESTDIR)/overlays
+	cp $(MUNTSOS)/boot/OrangePiZero2W/overlays/*.dtbo $(DESTDIR)/overlays
 endif
 
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
@@ -129,6 +132,7 @@ reallyclean: clean
 	$(MAKE) -C kernel reallyclean
 	rm -rf *.tgz *.downloaded
 	$(MAKE) -C $(MUNTSOS)/boot/BeagleBone/overlays clean
+	$(MAKE) -C $(MUNTSOS)/boot/OrangePiZero2W/overlays clean
 	$(MAKE) -C $(MUNTSOS)/boot/RaspberryPi/overlays clean
 
 distclean: reallyclean
