--- a/boot/OrangePiZero2W/scripts/Makefile
+++ b/boot/OrangePiZero2W/scripts/Makefile
@@ -20,14 +20,12 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-DESTDIR ?= .
-
 SCRIPTS	:= $(shell ls *.txt | awk '{ print gensub("txt", "scr", "G", $$1); }')
 
 # Define a pattern rule to make a U-Boot script image file from a text file
 
-$(DESTDIR)/%.scr : %.txt
-	mkimage -T script -C none -d $< $@
+%.scr : %.txt
+	mkimage -T script -C none -d $< $(DESTDIR)$@
 
 # Make all scripts
 
