Include bootfiles.md5 in bootfiles.tgz
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22570 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/OrangePiZero2W/Makefile
+++ b/boot/OrangePiZero2W/Makefile
@@ -20,9 +20,18 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
+BOOTFILES := bootfiles.md5 config.txt *.scr
+
 # Create boot files tarball
 
-bootfiles.tgz:
-	$(MAKE) -C scripts
-	tar czf $@ *.scr
-	rm -f *.scr
+default:
+	cp config.txt.OrangePiZero2W config.txt
+	$(MAKE) -C scripts DESTDIR=../
+	md5sum -b $(BOOTFILES) | grep -v bootfiles.md5 >bootfiles.md5
+	tar czf bootfiles.tgz $(BOOTFILES)
+	rm -f $(BOOTFILES)
+
+# Remove script image files
+
+clean:
+	rm -f $(BOOTFILES)
