--- a/boot/OrangePiZero2W/uboot/uboot.config
+++ b/boot/OrangePiZero2W/uboot/uboot.config
@@ -937,9 +937,10 @@ CONFIG_SAVEENV=y
 # CONFIG_OVERWRITE_ETHADDR_ONCE is not set
 CONFIG_ENV_MIN_ENTRIES=64
 CONFIG_ENV_MAX_ENTRIES=512
-# CONFIG_ENV_IS_NOWHERE is not set
+CONFIG_ENV_IS_DEFAULT=y
+CONFIG_ENV_IS_NOWHERE=y
 # CONFIG_ENV_IS_IN_EEPROM is not set
-CONFIG_ENV_IS_IN_FAT=y
+# CONFIG_ENV_IS_IN_FAT is not set
 # CONFIG_ENV_IS_IN_EXT4 is not set
 # CONFIG_ENV_IS_IN_FLASH is not set
 # CONFIG_ENV_IS_IN_MMC is not set
@@ -948,12 +949,7 @@ CONFIG_ENV_IS_IN_FAT=y
 # CONFIG_ENV_IS_IN_REMOTE is not set
 # CONFIG_ENV_IS_IN_SPI_FLASH is not set
 # CONFIG_SYS_REDUNDAND_ENVIRONMENT is not set
-CONFIG_ENV_FAT_INTERFACE="mmc"
-CONFIG_ENV_FAT_DEVICE_AND_PART=":auto"
-CONFIG_ENV_FAT_FILE="uboot.env"
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
-CONFIG_SYS_MMC_ENV_DEV=0
-CONFIG_SYS_MMC_ENV_PART=0
 # CONFIG_USE_DEFAULT_ENV_FILE is not set
 # CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG is not set
 # CONFIG_ENV_IMPORT_FDT is not set
