Support user LED on Orange Pi Zero 2 W
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22574 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -750,6 +750,9 @@ endif
 ifneq ($(findstring Beagle, $(BOARDNAME)),)
 	sed -i 's#@@USERLED@@#/sys/class/leds/beaglebone\:green\:usr0#g' $@/etc/rc
 endif
+ifeq ($(BOARDBASE), OrangePiZero2W)
+	sed -i 's#@@USERLED@@#/sys/class/leds/green\:status#g'	$@/etc/rc
+endif
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
 ifeq ($(KERNEL_BRANCH), 5.15)
 	sed -i 's#@@USERLED@@#/sys/class/leds/led0#g'		$@/etc/rc
