Added --sort=name to tar command
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22583 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -89,7 +89,7 @@ endif
 endif
 
 	cd $(DESTDIR) ; find * -type f -exec md5sum -b {} ";" | sort -k 2 | grep -v kernel.md5 >kernel.md5
-	cd $(DESTDIR) ; tar czf ../$@ * --owner=nobody --group=nobody --mode=ugo-w
+	cd $(DESTDIR) ; tar czf ../$@ * --owner=nobody --group=nobody --mode=ugo-w --sort=name
 	rm -rf $(DESTDIR)
 
 ###############################################################################
